--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
-		"lint": "turbo run lint",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"check-types": "turbo run check-types"
+		"check": "biome check .",
+		"check:fix": "biome check --write .",
+		"format": "biome format --write ."
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
