--- a/biome.json
+++ b/biome.json
@@ -114,7 +114,7 @@
 			},
 			"nursery": {
 				"useSortedClasses": "error",
-				"useExplicitType": "error"
+				"useExplicitType": "off"
 			},
 			"security": {
 				"noSecrets": "off"
