--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"check": "biome check .",
 		"check:fix": "biome check --write .",
 		"check:fix:force": "biome check --write --unsafe .",
-		"format": "biome format --write ."
+		"format": "biome format --write .",
+		"typecheck": "turbo run typecheck"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
