--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -22,9 +22,12 @@
 	"scripts": {
 		"build": "tsdown",
 		"test": "vitest run",
-		"test:watch": "vitest"
+		"test:watch": "vitest",
+		"typecheck": "tsc --noEmit"
 	},
 	"devDependencies": {
+		"@types/apca-w3": "^0.1.3",
+		"apca-w3": "^0.1.9",
 		"colorjs.io": "^0.5.2",
 		"ml-matrix": "^6.12.1",
 		"tsdown": "^0.9.0",
