--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,12 @@
 		"build": {
 			"dependsOn": ["^build"],
 			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": [".next/**", "!.next/cache/**"]
+			"outputs": ["dist/**"]
+		},
+		"generate": {
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*"],
+			"outputs": [".output/**"]
 		},
 		"lint": {
 			"dependsOn": ["^lint"]
