--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -11,10 +11,8 @@
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"exports": {
-		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts"
-		}
+		".": "./dist/index.js",
+		"./package.json": "./package.json"
 	},
 	"files": [
 		"dist"
@@ -29,8 +27,7 @@
 		"@types/apca-w3": "^0.1.3",
 		"apca-w3": "^0.1.9",
 		"colorjs.io": "^0.5.2",
-		"ml-matrix": "^6.12.1",
-		"tsdown": "^0.9.0",
+		"tsdown": "^0.17.2",
 		"typescript": "^5.7.2",
 		"vitest": "^2.1.8"
 	},
