--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
-		"check": "biome check .",
-		"check:fix": "biome check --write .",
-		"check:fix:force": "biome check --write --unsafe .",
+		"check": "biome check --write .",
+		"check:force": "biome check --write --unsafe .",
+		"check:report": "biome check  .",
 		"format": "biome format --write .",
 		"typecheck": "turbo run typecheck"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.8",
+		"@biomejs/biome": "^2.3.10",
 		"@changesets/cli": "^2.29.8",
-		"turbo": "^2.6.3",
-		"typescript": "5.9.2"
+		"turbo": "^2.7.2",
+		"typescript": "5.9.3"
 	},
 	"packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501",
 	"engines": {
