--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -23,13 +23,15 @@
 		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit"
 	},
+	"dependencies": {
+		"apca-w3": "^0.1.9",
+		"colorjs.io": "^0.6.0"
+	},
 	"devDependencies": {
 		"@types/apca-w3": "^0.1.3",
-		"apca-w3": "^0.1.9",
-		"colorjs.io": "^0.5.2",
-		"tsdown": "^0.17.2",
-		"typescript": "^5.7.2",
-		"vitest": "^2.1.8"
+		"tsdown": "^0.18.3",
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.16"
 	},
 	"publishConfig": {
 		"access": "public"
