--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
+		"test": "turbo run test",
 		"check": "biome check --write .",
 		"check:force": "biome check --write --unsafe .",
 		"check:report": "biome check  .",
