--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,10 @@
 		"lint": {
 			"dependsOn": ["^lint"]
 		},
+		"test": {
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*"]
+		},
 		"typecheck": {
 			"dependsOn": ["^typecheck"]
 		},
