Generate @property rules and inline apex constants
Add CSS @property generation for color inputs, internal variables, and
per-label contrast outputs. Inline build-time apex values into calc()
expressions so generated CSS no longer relies on intermediate --_apex-*
vars.

Add npm preview script and turbo preview task. Update tests to expect
inlined apex comments and tweak playground sample text.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
+		"preview": "turbo watch preview",
 		"test": "turbo run test",
 		"check": "biome check --write .",
 		"check:force": "biome check --write --unsafe .",
