Update package manager, scripts and lockfile
Bump pnpm to 10.26.2 and regenerate pnpm-lock.yaml Add deps:reinstall
and deps:upgrade scripts to root package.json Switch vitest watch to
"vitest watch" and remove redundant typescript devDeps Add
allowedDeprecatedVersions entry for @types/parse-path in workspace

--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -20,7 +20,7 @@
 	"scripts": {
 		"build": "tsdown",
 		"test": "vitest run",
-		"test:watch": "vitest",
+		"test:watch": "vitest watch",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
@@ -28,7 +28,6 @@
 	},
 	"devDependencies": {
 		"tsdown": "^0.18.3",
-		"typescript": "^5.9.3",
 		"vitest": "^4.0.16"
 	},
 	"publishConfig": {
