--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,6 @@ onlyBuiltDependencies:
   - '@parcel/watcher'
   - esbuild
   - rolldown
+
+allowedDeprecatedVersions:
+  '@types/parse-path': '7.1.0'
