--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"preview": "turbo watch preview",
-		"test": "turbo run test",
 		"check": "biome check --write .",
 		"check:force": "biome check --write --unsafe .",
 		"check:report": "biome check  .",
+		"deps:reinstall": "pnpm dlx rimraf --glob node_modules packages/*/node_modules pnpm-lock.yaml && pnpm install",
+		"deps:upgrade": "pnpm update --recursive --latest && pnpm dedupe",
+		"dev": "turbo run dev",
 		"format": "biome format --write .",
+		"preview": "turbo watch preview",
+		"test": "turbo run test",
 		"typecheck": "turbo run typecheck"
 	},
 	"devDependencies": {
@@ -18,7 +20,7 @@
 		"turbo": "^2.7.2",
 		"typescript": "5.9.3"
 	},
-	"packageManager": "pnpm@10.25.0+sha512.5e82639027af37cf832061bcc6d639c219634488e0f2baebe785028a793de7b525ffcd3f7ff574f5e9860654e098fe852ba8ac5dd5cefe1767d23a020a92f501",
+	"packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6",
 	"engines": {
 		"node": ">=24"
 	}
