--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
-		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
+		"postinstall": "nuxt prepare",
+		"preview": "nuxt preview"
 	},
 	"dependencies": {
 		"nuxt": "^4.2.2",
@@ -16,7 +16,6 @@
 	},
 	"devDependencies": {
 		"@vueuse/core": "^14.1.0",
-		"@vueuse/nuxt": "^14.1.0",
-		"typescript": "^5.9.3"
+		"@vueuse/nuxt": "^14.1.0"
 	}
 }
