Add browser integration tests and Vitest browser
Add new browser test suite and Vitest 'browser' project using
@vitest/browser-playwright (Playwright/Chromium). Add test scripts
(test:unit, test:browser), test/tsconfig.json, and
integration.browser.ts. Update package.json devDeps and pnpm-lock to
include browser deps.

--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -21,12 +21,15 @@
 		"build": "tsdown",
 		"test": "vitest run",
 		"test:watch": "vitest watch",
+		"test:unit": "vitest run --project unit",
+		"test:browser": "vitest run --project browser",
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
 		"colorjs.io": "^0.6.0"
 	},
 	"devDependencies": {
+		"@vitest/browser-playwright": "^4.0.16",
 		"tsdown": "^0.18.3",
 		"vitest": "^4.0.16"
 	},
