--- a/packages/ok-apca/tsconfig.json
+++ b/packages/ok-apca/tsconfig.json
@@ -23,6 +23,6 @@
 		"noImplicitOverride": true,
 		"forceConsistentCasingInFileNames": true
 	},
-	"include": ["src/**/*", "test/**/*"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
 }
