Add fast-check tests and remove heuristics
Add fast-check as a devDependency and convert many test suites to
property-based unit tests under test/unit using fast-check. Remove the
heuristic solver (heuristic.ts) and related heuristic types/imports.
Update test import paths and vitest config to run unit tests, add an
integration tsconfig, and tweak a smoothing comment in the APCA
implementation (Bézier → Hermite).

--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@vitest/browser-playwright": "^4.0.16",
+		"fast-check": "^4.5.3",
 		"tsdown": "^0.18.3",
 		"vitest": "^4.0.16"
 	},
