--- a/turbo.json
+++ b/turbo.json
@@ -31,7 +31,8 @@
 		"dev": {
 			"dependsOn": ["^build"],
 			"cache": false,
-			"persistent": true
+			"persistent": true,
+			"interruptible": true
 		},
 		"//#check": {
 			"inputs": ["$TURBO_DEFAULT$", "biome.json"]
