Add calc-tree and migrate ok-apca to it
Introduce @ok-apca/calc-tree expression API and shared OK/APCA
expressions. Replace duplicated JS/CSS formula implementations with a
single expression-tree source of truth, add expressions.ts, update
imports and package.json, and remove outdated proposal/design docs

--- a/packages/ok-apca/package.json
+++ b/packages/ok-apca/package.json
@@ -26,6 +26,7 @@
 		"typecheck": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@ok-apca/calc-tree": "workspace:*",
 		"colorjs.io": "^0.6.0"
 	},
 	"devDependencies": {
