--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.8/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
@@ -101,7 +101,7 @@
 				"useTrimStartEnd": "error"
 			},
 			"suspicious": {
-				"noConsole": "error",
+				"noConsole": "off",
 				"noEmptyBlockStatements": "error",
 				"noEvolvingTypes": "error",
 				"noDuplicateCustomProperties": "error",
