--- a/packages/calc-tree/package.json
+++ b/packages/calc-tree/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ok-apca",
+	"name": "@ok-apca/calc-tree",
 	"version": "0.0.0",
 	"author": {
 		"name": "Tim Morris",
@@ -21,16 +21,9 @@
 		"build": "tsdown",
 		"test": "vitest run",
 		"test:watch": "vitest watch",
-		"test:unit": "vitest run --project unit",
-		"test:browser": "vitest run --project browser",
 		"typecheck": "tsc --noEmit"
 	},
-	"dependencies": {
-		"@ok-apca/calc-tree": "workspace:*",
-		"colorjs.io": "^0.6.0"
-	},
 	"devDependencies": {
-		"@vitest/browser-playwright": "^4.0.16",
 		"fast-check": "^4.5.3",
 		"tsdown": "^0.18.3",
 		"vitest": "^4.0.16"
