--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -3,21 +3,19 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"build": "nuxt build",
 		"dev": "nuxt dev",
 		"generate": "nuxt generate",
-		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
+		"postinstall": "nuxt prepare",
+		"preview": "nuxt preview"
 	},
 	"dependencies": {
-		"nuxt": "^4.2.1",
+		"nuxt": "^4.2.2",
 		"ok-apca": "workspace:*",
-		"vue": "^3.5.25",
-		"vue-router": "^4.6.3"
+		"vue": "^3.5.26",
+		"vue-router": "^4.6.4"
 	},
 	"devDependencies": {
 		"@vueuse/core": "^14.1.0",
-		"@vueuse/nuxt": "^14.1.0",
-		"typescript": "^5.9.2"
+		"@vueuse/nuxt": "^14.1.0"
 	}
 }
