--- a/turbo.json
+++ b/turbo.json
@@ -5,10 +5,25 @@
 		"build": {
 			"dependsOn": ["^build"],
 			"inputs": ["$TURBO_DEFAULT$", ".env*"],
-			"outputs": [".next/**", "!.next/cache/**"]
+			"outputs": ["dist/**"]
+		},
+		"generate": {
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*"],
+			"outputs": [".output/**"]
+		},
+		"preview": {
+			"dependsOn": ["generate"],
+			"cache": false,
+			"persistent": true,
+			"interruptible": true
 		},
 		"lint": {
 			"dependsOn": ["^lint"]
+		},
+		"test": {
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$", ".env*"]
 		},
 		"typecheck": {
 			"dependsOn": ["^typecheck"]
@@ -16,7 +31,21 @@
 		"dev": {
 			"dependsOn": ["^build"],
 			"cache": false,
-			"persistent": true
+			"persistent": true,
+			"interruptible": true
+		},
+		"//#check": {
+			"inputs": ["$TURBO_DEFAULT$", "biome.json"]
+		},
+		"//#check:force": {
+			"inputs": ["$TURBO_DEFAULT$", "biome.json"]
+		},
+		"//#check:report": {
+			"inputs": ["$TURBO_DEFAULT$", "biome.json"],
+			"cache": false
+		},
+		"//#format": {
+			"inputs": ["$TURBO_DEFAULT$", "biome.json"]
 		}
 	}
 }
