--- a/packages/calc-tree/package.json
+++ b/packages/calc-tree/package.json
@@ -25,8 +25,8 @@
 	},
 	"devDependencies": {
 		"fast-check": "^4.5.3",
-		"tsdown": "^0.18.3",
-		"vitest": "^4.0.16"
+		"tsdown": "0.20.1",
+		"vitest": "^4.0.18"
 	},
 	"publishConfig": {
 		"access": "public"
